# COMPSYS-304-Assignment-3

./: .gitignore  CMakeLists.txt  CS304A3.csv  README.md  assignment.c  assignment3_answer.tex  cachetestreport  runCache.sh
CS304-A3-mkem114-6273632/task_1/: Makefile  cachetest1.c  cachetest2.c
CS304-A3-mkem114-6273632/task_2/: Makefile  matrix1.c  matrix2.c  matrix3.c
task_2/: matrix1.c
